# Ethos_public

./: .gitignore  README.md  check_items.py  docker-compose.yml  ehoss.md  ethosnews_doc.tex  pyproject.toml  render.yaml  requirements.txt  schema.sql  test_db.py  test_produce.py  test_qdrant.py
.claude/: settings.local.json
.github/: copilot-instructions.md
backend/: .env.example  README.md  config.py  main.py
backend/api/: auth.py  checker.py  checker_api.py  clusters.py  engagement.py  feed.py  leaderboard.py  news_api.py  onboarding.py  pnc.py  rephrase.py  voice.py
backend/core/: auth.py  clients.py  kafka.py  llm.py  logging_config.py  rabbitmq.py  security.py
backend/core/db/: __init__.py  cache.py  postgres.py
backend/schemas/: auth.py  engagement.py  onboarding.py  pnc.py
backend/services/: pnc_service.py
backend/services/clustering/: cluster_engine.py
backend/services/fact_checker/: fact_checker_engine.py
backend/services/ingestion/: continuous_pipeline.py  load_pnc.py  setup_qdrant.py
backend/services/leaderboard/: leaderboard_engine.py
backend/services/recommendations/: stream_app.py
backend/services/slop_detector/: slop_backfill.py  slop_detector.py  slop_detector_l2.py
backend/workers/: article_worker.py
ethosnews/: README.md
ethosnews/pnc_onboarding/: mock_db_pnc.json  pnc_onboarding.py
frontend/: README.md  index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  App.module.css
frontend/src/api/: client.js
frontend/src/styles/: globals.css
frontend/src/utils/: helpers.js
narrag/nar_rag/: .env.example  .gitignore  README.md  TECHNICAL_REPORT.md  docker-compose.yml  info.md  requirements.txt  run.py
scripts/: assign_categories.py  backfill_ai_slop.py  pull_schema.py
(+85 files in other folders)
